# engineeringMemory

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  rust-toolchain.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-crates.yml  release-crates.yml
docs/: prd.md  test-coverage-gap-analysis.md
docs/adrs/: 0001-retrieval-bounded-context.md  0002-project-tag-filter-join.md  0003-score-semantics-and-overfetch.md  0004-relevance-judgment.md  0005-eval-depth-and-ci-determinism.md  0006-llm-provider-abstraction.md  0007-prompt-template-versioning.md  0008-citation-protocol-and-no-answer-policy.md  0009-hybrid-search-rrf.md  0010-committed-release-versions.md  0011-feedback-as-retrieval-observability.md  0012-local-api-thin-adapter-over-services.md  README.md
docs/ddd/: README.md  aggregates.md  context-map.md  domain-events.md  ubiquitous-language.md
docs/ddd/contexts/: answer-generation.md  evaluation.md  feedback.md  ingestion.md  retrieval.md  shared-kernel.md
docs/sparc/m1-document-ingestion/: 01-specification.md  02-pseudocode.md  03-architecture.md  04-refinement-completion.md  state.json
docs/sparc/m2-retrieval-cli/: 01-specification.md  02-pseudocode.md  03-architecture.md  04-refinement-completion.md
docs/sparc/m3-retrieval-eval/: 01-specification.md  02-pseudocode.md  03-architecture.md  04-refinement-completion.md
docs/sparc/m4-rag-answer-generation/: 01-specification.md  02-pseudocode.md  03-architecture.md  04-refinement-completion.md
docs/sparc/m5-hybrid-search/: 01-specification.md  02-pseudocode.md  03-architecture.md  04-refinement-completion.md
docs/sparc/m6-feedback-retrieval-debugging/: 01-specification.md  02-pseudocode.md  03-architecture.md  04-refinement-completion.md
docs/spike/: M0-setup.md  M0-spec.md
eval/: questions.json
src/: lexical_index.rs  lib.rs  main.rs  vector_store.rs
src/answer_generation/: mod.rs  ports.rs
src/answer_generation/application/: context_assembly.rs  mod.rs  rag_service.rs
src/answer_generation/domain/: answer.rs  context.rs  mod.rs  prompt_template.rs
src/answer_generation/infra/: answer_log_writer.rs  mock_llm.rs  mod.rs
src/evaluation/: mod.rs  ports.rs
src/evaluation/application/: evaluation_service.rs  metrics_calc.rs  mod.rs  relevance.rs
src/evaluation/domain/: metrics.rs  mod.rs  question.rs  question_result.rs  run.rs
src/evaluation/infra/: dataset_loader.rs  mod.rs  report_writer.rs  retrieval_search_adapter.rs
src/feedback/: mod.rs  ports.rs
src/feedback/application/: mod.rs
src/feedback/domain/: mod.rs
src/feedback/infra/: mod.rs  (+2 more)
src/ingestion/: chunking.rs  domain.rs  embedding.rs  mod.rs  model_guard.rs  orchestrator.rs  ports.rs
src/retrieval/: mod.rs  ports.rs
tests/: answer_generation_ask.rs  default_embedder.rs  evaluation_eval.rs  feedback_cli.rs  feedback_workflow.rs  publish_workflow.rs  retrieval_search.rs
(+21 files in other folders)
